菜单第三个按键是切换单双人键盘操控模式
不按是单人，按一次双人，再按一次单人，一次类推

--- a/龙神绯想录/RyuJin.vcxproj.filters
+++ b/龙神绯想录/RyuJin.vcxproj.filters
@@ -99,7 +99,7 @@
     <ClCompile Include="mydat\source\boss_shotH.cpp">
       <Filter>ソース ファイル\boss_shot\Hard</Filter>
     </ClCompile>
-    <ClCompile Include="wanyi.cpp">
+    <ClCompile Include="mydat\source\wanyi.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
