--- a/龙神绯想录/RyuJin.vcxproj
+++ b/龙神绯想录/RyuJin.vcxproj
@@ -108,7 +108,7 @@
     <ClCompile Include="mydat\source\out_lazer.cpp" />
     <ClCompile Include="mydat\source\shot.cpp" />
     <ClCompile Include="mydat\source\shotH.cpp" />
-    <ClCompile Include="wanyi.cpp" />
+    <ClCompile Include="mydat\source\wanyi.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\DxDirectX.h" />
